# extractive_sum

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: data_wrangling.Rmd  data_wrangling.ipynb
src/data/: make_dataset.py  make_interim_dataset.py  make_segmented_dataset.py  make_tokenized_sentences.py  remove_stopwords.py  removing_sentences_with_no_meaning.py  stemming.py
src/features/: build_pos_tagger_sent_len.py  build_punctuation_feature.py  build_tf_idf.py
