
[tool.poetry]
name = "extractive_sum"
version = "0.1.0"
description = ""
authors = ["Sara <sarabouaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
Sphinx = "^3.2.1"
coverage = "^5.2.1"
awscli = "^1.18.133"
flake8 = "^3.8.3"
python-dotenv = ">=0.5.1"
numpy = "^1.16.1"
pandas = "^1.1.1"
matplotlib = "^3.3.1"
tensorflow = "^2.3.0"
tfds-nightly = "^3.2.1-alpha.202009070105"
nltk = "^3.5"
notebook = "^6.1.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

